--- a/package.json
+++ b/package.json
@@ -70,28 +70,28 @@
   },
   "homepage": "https://github.com/code-chunks/angular2-logger#readme",
   "devDependencies": {
-    "typescript": "~2.5.3",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/compiler-cli": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "core-js": "^2.4.1",
+    "typescript": "~3.1.1",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "core-js": "^2.5.4",
     "rimraf": "^2.5.2",
-    "rxjs": "5.5.0",
+    "rxjs": "~6.3.3",
     "systemjs": "0.19.41",
     "tslint": "4.5.1",
     "typings": "^2.0.0",
     "uglify-js": "^2.6.2",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.26"
   },
   "peerDependencies": {
-    "@angular/common": "^4.0.2 || ^5.0.0",
-    "@angular/compiler": "^4.0.2 || ^5.0.0",
-    "@angular/core": "^4.0.2 || ^5.0.0",
-    "@angular/platform-browser": "^4.0.2 || ^5.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.2 || ^5.0.0"
+    "@angular/common": "^4.0.2 || ^7.0.0",
+    "@angular/compiler": "^4.0.2 || ^7.0.0",
+    "@angular/core": "^4.0.2 || ^7.0.0",
+    "@angular/platform-browser": "^4.0.2 || ^7.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.2 || ^7.0.0"
   },
   "main": "./dist/cjs/core.js",
   "module": "./dist/umd/core.js"
